<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item-->
<!--        android:id="@+id/navigation_search"-->
<!--        android:icon="@drawable/ic_baseline_search_24"-->
<!--        android:title="@string/title_search" />-->

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/title_menu" />

</menu>