<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

<!--    <fragment-->
<!--        android:id="@+id/navigation_search"-->
<!--        android:name="com.eliottdup.gettalents.ui.search.SearchFragment"-->
<!--        android:label="@string/title_search"-->
<!--        tools:layout="@layout/fragment_search" />-->

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.eliottdup.gettalents.ui.home.HomeFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.eliottdup.gettalents.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.eliottdup.gettalents.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.eliottdup.gettalents.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />
</navigation>