<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.profile.edit.AddressDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dialog_fragment_width"
        android:layout_height="wrap_content"
        android:background="@color/colorWindowBackground"
        android:paddingBottom="8dp">

        <TextView
            style="@style/GetTalents.Profile.Title"
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:text="@string/title_address"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/separator1"
            android:layout_width="0dp"
            android:layout_height="0.8dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorText"
            android:alpha="0.5"
            app:layout_constraintTop_toBottomOf="@+id/textView_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/icon_location"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_baseline_location_24"
            android:importantForAccessibility="no"
            app:layout_constraintTop_toTopOf="@+id/inputLayout_address"
            app:layout_constraintBottom_toBottomOf="@+id/inputLayout_address"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/inputLayout_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/separator1"
            app:layout_constraintStart_toEndOf="@+id/icon_location"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_address"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/inputLayout_zipCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            app:errorEnabled="true"
            app:layout_constraintHorizontal_weight="0.4"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout_address"
            app:layout_constraintStart_toEndOf="@+id/icon_location"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_zipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/hint_zip_code"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/inputLayout_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            app:errorEnabled="true"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout_zipCode"
            app:layout_constraintStart_toEndOf="@+id/icon_location"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_city"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/inputLayout_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="16dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout_city"
            app:layout_constraintStart_toEndOf="@+id/icon_location"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_country"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/separator2"
            android:layout_width="0dp"
            android:layout_height="0.8dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorText"
            android:alpha="0.5"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/label_add"
            app:layout_constraintTop_toBottomOf="@+id/separator2"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/label_cancel"
            app:layout_constraintTop_toBottomOf="@+id/separator2"
            app:layout_constraintEnd_toStartOf="@+id/button_add"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>