<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.edit.PhotoDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWindowBackground"
        android:paddingBottom="8dp">

        <TextView
            style="@style/GetTalents.Profile.Title"
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/title_picture"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/separator1"
            android:layout_width="0dp"
            android:layout_height="0.8dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorText"
            android:alpha="0.5"
            app:layout_constraintTop_toBottomOf="@+id/textView_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:id="@+id/button_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_camera"
            app:icon="@drawable/ic_baseline_photo_camera_24"
            app:iconPadding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/separator1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:id="@+id/button_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_media"
            app:icon="@drawable/ic_baseline_perm_media_24"
            app:iconPadding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>